# lightning-template-hydra

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
scripts/: prepare_release.py
src/: app.py  eval.py  infer.py  train.py
src/datamodules/: dog_breed_datamodule.py
src/static/: main.js  style.css
src/templates/: index.html
