[project]
name = "lightning-template-hydra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.8.0",
    "lightning[extra]>=2.4.0",
    "loguru>=0.7.2",
    "rich>=13.8.1",
    "tensorboard>=2.17.1",
    "timm>=1.0.9",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "fastapi>=0.110.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.27.1",
    "jinja2>=3.1.3",
    "aiofiles>=23.2.1"
]
